--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -19,6 +19,18 @@
     <Filter Include="Source Files\States">
       <UniqueIdentifier>{7ba651cc-f641-4e68-bc27-060254d8c947}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Monsters">
+      <UniqueIdentifier>{e5492ee8-157e-435c-8af9-e028511d47bc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Monsters">
+      <UniqueIdentifier>{1b81ae2b-d302-48b9-ac4d-07da75a5dd39}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Tower">
+      <UniqueIdentifier>{095efeea-b920-4ae4-8ee3-f67007f867ba}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Tower">
+      <UniqueIdentifier>{01767cdf-b99e-4410-bf99-0ba2e26f4144}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -27,31 +39,61 @@
     <ClCompile Include="imgui-SFML.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="StateMachine.cpp">
+    <ClCompile Include="StateMachine\StateMachine.cpp">
       <Filter>Source Files\States</Filter>
     </ClCompile>
-    <ClCompile Include="StateManager.cpp">
+    <ClCompile Include="StateMachine\StateManager.cpp">
       <Filter>Source Files\States</Filter>
     </ClCompile>
-    <ClCompile Include="MenuState.cpp">
+    <ClCompile Include="StateMachine\MenuState.cpp">
       <Filter>Source Files\States</Filter>
     </ClCompile>
-    <ClCompile Include="GameState.cpp">
+    <ClCompile Include="StateMachine\GameState.cpp">
       <Filter>Source Files\States</Filter>
+    </ClCompile>
+    <ClCompile Include="Monsters\Monster.cpp">
+      <Filter>Source Files\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="Monsters\MonsterPassive.cpp">
+      <Filter>Source Files\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="Monsters\MonsterActive.cpp">
+      <Filter>Source Files\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="Tower\Tower.cpp">
+      <Filter>Source Files\Tower</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="StateMachine.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Monsters\Monster.h">
+      <Filter>Header Files\Monsters</Filter>
     </ClInclude>
-    <ClInclude Include="StateManager.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="StateMachine\GameState.h">
+      <Filter>Header Files\States</Filter>
     </ClInclude>
-    <ClInclude Include="MenuState.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="StateMachine\MenuState.h">
+      <Filter>Header Files\States</Filter>
     </ClInclude>
-    <ClInclude Include="GameState.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="StateMachine\StateMachine.h">
+      <Filter>Header Files\States</Filter>
     </ClInclude>
+    <ClInclude Include="StateMachine\StateManager.h">
+      <Filter>Header Files\States</Filter>
+    </ClInclude>
+    <ClInclude Include="Monsters\MonsterPassive.h">
+      <Filter>Header Files\Monsters</Filter>
+    </ClInclude>
+    <ClInclude Include="Monsters\MonsterActive.h">
+      <Filter>Header Files\Monsters</Filter>
+    </ClInclude>
+    <ClInclude Include="Tower\Tower.h">
+      <Filter>Header Files\Tower</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Content\profiles.json" />
+    <None Include="Resources\Content\Levels\tutorial1.json" />
+    <None Include="Resources\Content\Monsters\zombie.json" />
+    <None Include="Resources\Content\Towers\cannon.json" />
   </ItemGroup>
 </Project>
