--- a/Project1/imgui.ini
+++ b/Project1/imgui.ini
@@ -3110,3 +3110,19 @@ Size=50,50
 Pos=1550,800
 Size=50,50
 
+[Window][UI]
+Pos=1550,850
+Size=74,91
+
+[Window][UI0]
+Pos=1500,850
+Size=58,110
+
+[Window][UI1]
+Pos=1550,850
+Size=58,56
+
+[Window][UI2]
+Pos=1550,850
+Size=58,56
+
