--- a/Project1/imgui.ini
+++ b/Project1/imgui.ini
@@ -11,7 +11,7 @@ Pos=738,300
 Size=266,135
 
 [Window][Exit]
-Pos=738,500
+Pos=738,700
 Size=266,135
 
 [Window][SelectText]
@@ -23,7 +23,7 @@ Pos=800,450
 Size=253,15699
 
 [Window][Back]
-Pos=738,700
+Pos=738,500
 Size=266,135
 
 [Window][NewProfile]
@@ -3125,4 +3125,16 @@ Size=58,56
 [Window][UI2]
 Pos=1550,850
 Size=58,56
+
+[Window][Startbutton]
+Pos=738,300
+Size=266,135
+
+[Window][Backbutton]
+Pos=738,500
+Size=266,135
+
+[Window][Exitbutton]
+Pos=738,700
+Size=266,135
 
