--- a/Project1/imgui.ini
+++ b/Project1/imgui.ini
@@ -3115,7 +3115,7 @@ Pos=1550,850
 Size=74,91
 
 [Window][UI0]
-Pos=1500,850
+Pos=1550,850
 Size=58,110
 
 [Window][UI1]
@@ -3137,4 +3137,16 @@ Size=266,135
 [Window][Exitbutton]
 Pos=738,700
 Size=266,135
+
+[Window][heart]
+Pos=-10,840
+Size=66,66
+
+[Window][Money]
+Pos=50,840
+Size=116,66
+
+[Window][PausedGameText]
+Pos=800,450
+Size=254,48
 
