--- a/Project1/imgui.ini
+++ b/Project1/imgui.ini
@@ -19,16 +19,16 @@ Pos=800,450
 Size=114,48
 
 [Window][Select Profile]
-Pos=800,450
-Size=253,15699
+Pos=700,425
+Size=216,266
 
 [Window][Back]
 Pos=738,500
 Size=266,135
 
 [Window][NewProfile]
-Pos=493,330
-Size=162,77
+Pos=700,175
+Size=216,166
 
 [Window][00]
 Pos=0,0
@@ -411,31 +411,31 @@ Pos=150,650
 Size=50,50
 
 [Window][510]
-Pos=1500,0
+Pos=1300,800
 Size=50,50
 
 [Window][511]
-Pos=1500,50
+Pos=1300,850
 Size=50,50
 
 [Window][512]
-Pos=1500,100
+Pos=1300,900
 Size=50,50
 
 [Window][513]
-Pos=1500,150
+Pos=1350,0
 Size=50,50
 
 [Window][514]
-Pos=1500,200
+Pos=1350,50
 Size=50,50
 
 [Window][515]
-Pos=1500,250
+Pos=1350,100
 Size=50,50
 
 [Window][516]
-Pos=1500,300
+Pos=1350,150
 Size=50,50
 
 [Window][60]
@@ -2095,7 +2095,7 @@ Pos=1300,200
 Size=50,50
 
 [Window][517]
-Pos=1500,350
+Pos=1350,200
 Size=50,50
 
 [Window][617]
@@ -3003,111 +3003,111 @@ Pos=1550,800
 Size=50,50
 
 [Window][509]
-Pos=1450,800
+Pos=1300,750
 Size=50,50
 
 [Window][518]
-Pos=1500,400
+Pos=1350,250
 Size=50,50
 
 [Window][519]
-Pos=1500,450
+Pos=1350,300
 Size=50,50
 
 [Window][520]
-Pos=1500,500
+Pos=1350,350
 Size=50,50
 
 [Window][521]
-Pos=1500,550
+Pos=1350,400
 Size=50,50
 
 [Window][522]
-Pos=1500,600
+Pos=1350,450
 Size=50,50
 
 [Window][523]
-Pos=1500,650
+Pos=1350,500
 Size=50,50
 
 [Window][524]
-Pos=1500,700
+Pos=1350,550
 Size=50,50
 
 [Window][525]
-Pos=1500,750
+Pos=1350,600
 Size=50,50
 
 [Window][526]
-Pos=1500,800
+Pos=1350,650
 Size=50,50
 
 [Window][527]
-Pos=1550,0
+Pos=1350,700
 Size=50,50
 
 [Window][528]
-Pos=1550,50
+Pos=1350,750
 Size=50,50
 
 [Window][529]
-Pos=1550,100
+Pos=1350,800
 Size=50,50
 
 [Window][530]
-Pos=1550,150
+Pos=1350,850
 Size=50,50
 
 [Window][531]
-Pos=1550,200
+Pos=1350,900
 Size=50,50
 
 [Window][532]
-Pos=1550,250
+Pos=1400,0
 Size=50,50
 
 [Window][533]
-Pos=1550,300
+Pos=1400,50
 Size=50,50
 
 [Window][534]
-Pos=1550,350
+Pos=1400,100
 Size=50,50
 
 [Window][535]
-Pos=1550,400
+Pos=1400,150
 Size=50,50
 
 [Window][536]
-Pos=1550,450
+Pos=1400,200
 Size=50,50
 
 [Window][537]
-Pos=1550,500
+Pos=1400,250
 Size=50,50
 
 [Window][538]
-Pos=1550,550
+Pos=1400,300
 Size=50,50
 
 [Window][539]
-Pos=1550,600
+Pos=1400,350
 Size=50,50
 
 [Window][540]
-Pos=1550,650
+Pos=1400,400
 Size=50,50
 
 [Window][541]
-Pos=1550,700
+Pos=1400,450
 Size=50,50
 
 [Window][542]
-Pos=1550,750
+Pos=1400,500
 Size=50,50
 
 [Window][543]
-Pos=1550,800
+Pos=1400,550
 Size=50,50
 
 [Window][UI]
@@ -3131,11 +3131,11 @@ Pos=738,300
 Size=266,135
 
 [Window][Backbutton]
-Pos=738,500
+Pos=700,725
 Size=266,135
 
 [Window][Exitbutton]
-Pos=738,700
+Pos=700,725
 Size=266,135
 
 [Window][heart]
@@ -3149,4 +3149,304 @@ Size=116,66
 [Window][PausedGameText]
 Pos=645,345
 Size=310,210
+
+[Window][Field]
+Pos=1550,800
+Size=50,50
+
+[Window][544]
+Pos=1400,600
+Size=50,50
+
+[Window][545]
+Pos=1400,650
+Size=50,50
+
+[Window][546]
+Pos=1400,700
+Size=50,50
+
+[Window][547]
+Pos=1400,750
+Size=50,50
+
+[Window][548]
+Pos=1400,800
+Size=50,50
+
+[Window][549]
+Pos=1400,850
+Size=50,50
+
+[Window][550]
+Pos=1400,900
+Size=50,50
+
+[Window][551]
+Pos=1450,0
+Size=50,50
+
+[Window][552]
+Pos=1450,50
+Size=50,50
+
+[Window][553]
+Pos=1450,100
+Size=50,50
+
+[Window][554]
+Pos=1450,150
+Size=50,50
+
+[Window][555]
+Pos=1450,200
+Size=50,50
+
+[Window][556]
+Pos=1450,250
+Size=50,50
+
+[Window][557]
+Pos=1450,300
+Size=50,50
+
+[Window][558]
+Pos=1450,350
+Size=50,50
+
+[Window][559]
+Pos=1450,400
+Size=50,50
+
+[Window][560]
+Pos=1450,450
+Size=50,50
+
+[Window][561]
+Pos=1450,500
+Size=50,50
+
+[Window][562]
+Pos=1450,550
+Size=50,50
+
+[Window][563]
+Pos=1450,600
+Size=50,50
+
+[Window][564]
+Pos=1450,650
+Size=50,50
+
+[Window][565]
+Pos=1450,700
+Size=50,50
+
+[Window][566]
+Pos=1450,750
+Size=50,50
+
+[Window][567]
+Pos=1450,800
+Size=50,50
+
+[Window][568]
+Pos=1450,850
+Size=50,50
+
+[Window][569]
+Pos=1450,900
+Size=50,50
+
+[Window][570]
+Pos=1500,0
+Size=50,50
+
+[Window][571]
+Pos=1500,50
+Size=50,50
+
+[Window][572]
+Pos=1500,100
+Size=50,50
+
+[Window][573]
+Pos=1500,150
+Size=50,50
+
+[Window][574]
+Pos=1500,200
+Size=50,50
+
+[Window][575]
+Pos=1500,250
+Size=50,50
+
+[Window][576]
+Pos=1500,300
+Size=50,50
+
+[Window][577]
+Pos=1500,350
+Size=50,50
+
+[Window][578]
+Pos=1500,400
+Size=50,50
+
+[Window][579]
+Pos=1500,450
+Size=50,50
+
+[Window][580]
+Pos=1500,500
+Size=50,50
+
+[Window][581]
+Pos=1500,550
+Size=50,50
+
+[Window][582]
+Pos=1500,600
+Size=50,50
+
+[Window][583]
+Pos=1500,650
+Size=50,50
+
+[Window][584]
+Pos=1500,700
+Size=50,50
+
+[Window][585]
+Pos=1500,750
+Size=50,50
+
+[Window][586]
+Pos=1500,800
+Size=50,50
+
+[Window][587]
+Pos=1500,850
+Size=50,50
+
+[Window][588]
+Pos=1500,900
+Size=50,50
+
+[Window][589]
+Pos=1550,0
+Size=50,50
+
+[Window][590]
+Pos=1550,50
+Size=50,50
+
+[Window][591]
+Pos=1550,100
+Size=50,50
+
+[Window][592]
+Pos=1550,150
+Size=50,50
+
+[Window][593]
+Pos=1550,200
+Size=50,50
+
+[Window][594]
+Pos=1550,250
+Size=50,50
+
+[Window][595]
+Pos=1550,300
+Size=50,50
+
+[Window][596]
+Pos=1550,350
+Size=50,50
+
+[Window][597]
+Pos=1550,400
+Size=50,50
+
+[Window][598]
+Pos=1550,450
+Size=50,50
+
+[Window][599]
+Pos=1550,500
+Size=50,50
+
+[Window][600]
+Pos=1550,550
+Size=50,50
+
+[Window][601]
+Pos=1550,600
+Size=50,50
+
+[Window][602]
+Pos=1550,650
+Size=50,50
+
+[Window][603]
+Pos=1550,700
+Size=50,50
+
+[Window][604]
+Pos=1550,750
+Size=50,50
+
+[Window][605]
+Pos=1550,800
+Size=50,50
+
+[Window][606]
+Pos=1550,850
+Size=50,50
+
+[Window][607]
+Pos=1550,900
+Size=50,50
+
+[Window][Select Levelbutton]
+Pos=700,425
+Size=266,116
+
+[Window][Tutorial 1button]
+Pos=700,425
+Size=266,116
+
+[Window][Progress]
+Pos=134,475
+Size=32,48
+
+[Window][Info]
+Pos=645,345
+Size=310,215
+
+[Window][BackButtonbutton]
+Pos=700,800
+Size=224,72
+
+[Window][Change Profilebutton]
+Pos=700,625
+Size=224,132
+
+[Window][Optionsbutton]
+Pos=700,525
+Size=224,72
+
+[Window][Creditsbutton]
+Pos=700,525
+Size=224,72
+
+[Window][Settingsbutton]
+Pos=700,325
+Size=224,72
+
+[Window][Credit]
+Pos=696,310
+Size=233,48
 
