--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -115,8 +115,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Content\profiles.json" />
-    <None Include="Resources\Content\Levels\tutorial1.json" />
+    <None Include="Resources\Content\profiles" />
+    <None Include="Resources\Content\Levels\tutorial1" />
     <None Include="Resources\Content\Monsters\zombie" />
     <None Include="Resources\Content\Towers\cannon" />
     <None Include="StateMachine\LoadLevel.inl">
