--- a/Project1/imgui.ini
+++ b/Project1/imgui.ini
@@ -3116,7 +3116,7 @@ Size=74,91
 
 [Window][UI0]
 Pos=1500,850
-Size=58,110
+Size=50,50
 
 [Window][UI1]
 Pos=1550,850
@@ -3489,4 +3489,8 @@ Size=216,66
 [Window][Hammer]
 Pos=150,850
 Size=50,50
+
+[Window][HammerFrame]
+Pos=154,854
+Size=46,46
 
