--- a/Project1/imgui.ini
+++ b/Project1/imgui.ini
@@ -3115,11 +3115,11 @@ Pos=1550,850
 Size=74,91
 
 [Window][UI0]
-Pos=1500,850
+Pos=1450,850
 Size=50,50
 
 [Window][UI1]
-Pos=1550,850
+Pos=1500,850
 Size=58,56
 
 [Window][UI2]
@@ -3131,11 +3131,11 @@ Pos=738,300
 Size=266,135
 
 [Window][Backbutton]
-Pos=700,700
+Pos=692,700
 Size=266,135
 
 [Window][Exitbutton]
-Pos=700,725
+Pos=692,725
 Size=266,135
 
 [Window][heart]
@@ -3411,11 +3411,11 @@ Pos=1550,900
 Size=50,50
 
 [Window][Select Levelbutton]
-Pos=700,425
+Pos=692,425
 Size=266,116
 
 [Window][Tutorial 1button]
-Pos=700,325
+Pos=692,425
 Size=266,116
 
 [Window][Progress]
@@ -3431,19 +3431,19 @@ Pos=700,800
 Size=224,72
 
 [Window][Change Profilebutton]
-Pos=700,625
+Pos=692,625
 Size=224,132
 
 [Window][Optionsbutton]
-Pos=700,525
+Pos=692,525
 Size=224,72
 
 [Window][Creditsbutton]
-Pos=700,525
+Pos=692,525
 Size=224,72
 
 [Window][Settingsbutton]
-Pos=700,425
+Pos=692,425
 Size=224,72
 
 [Window][Credit]
@@ -3471,19 +3471,19 @@ Pos=300,850
 Size=50,50
 
 [Window][Delete Profilebutton]
-Pos=700,625
+Pos=692,625
 Size=216,66
 
 [Window][Yesbutton]
-Pos=700,625
+Pos=692,625
 Size=216,66
 
 [Window][Nobutton]
-Pos=700,725
+Pos=692,725
 Size=216,66
 
 [Window][Tutorial 2button]
-Pos=700,525
+Pos=692,525
 Size=216,66
 
 [Window][Hammer]
@@ -3497,4 +3497,8 @@ Size=46,46
 [Window][Version]
 Pos=0,875
 Size=114,48
+
+[Window][Tutorial 3button]
+Pos=692,625
+Size=216,66
 
